adding new content, and Nowa Huta for the new group

--- a/OneWiki/data/Ak%27anon.wiki
+++ b/OneWiki/data/Ak%27anon.wiki
@@ -20,7 +20,7 @@ Ak'anon is not lead by a single ruler, but a council of influencial individuals.
     -Calwin (F), master shipwright and head of international trade
     -Bribis (F), master smelter and head of mining operations
     -Lanziver (M), architect of city construction
-    -Zilkas (M), master of dimeritium constructs and machinery
+    -Zilkas (M), master of etherium constructs and machinery
     -Ummorn (M), leader of defence and security (guards use crossbows and daggers) (Killed by evil group)
     -Briyur (F), master of the arts
     -Sellys (F), head provisions organizer
