adding evil group notes

--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -7,6 +7,7 @@ XXXXXXX
 XXXXXXX
 XXXXXXX
 XXXXXXX
+X
 
 ++++Evil Session 2 Notes:
 The crew had supplied food to tide over the refugee camp for a few days before they persuaded the [Marines] to let them join along when they departed.
@@ -113,6 +114,19 @@ Slew [King Jor Doken], [Elisha Vanesson] and [Shava Caelynn] and many guards, ci
 ++++Session 13 notes:
 the next time the group goes to sea for an extended periods of time, they will encounter an [Order of Steel] Warship. 
  A large, black-steel made ship with spiked and jagged architecture. This ship has no sails. It is powered by an Etherium core (orb with runes that match Edan's orb with Runes), that when focused upon by a magically attuned "captain", can control the ship's movement.
- - 2 [Steel Inquisitor]s
+ - 4 [Steel Inquisitor]s
  - 6 Brothers
  - 3 cannons - left, right and front (pg 255 DM handbook)
+ 
+ human and elf w/ dagger (carpenter)
+ 1 elf (breaking) and 2 human carpenters in guild
+ 2XX humans, 1 Xdwarf at herbalist looting "Mahogany, No Looting, By new king's decree"
+ Yanny McLoughin released
+ Looted Shirrong's Anvil from the Blacksmith
+ 4 servants - 3 F (44,42 21 Marta) 1 M
+ Armourer half-orc - Anton standing guard
+ Gold left in cook's room, Gold left with servants
+ 
+ 4 archers and 10 masons bunker down in the mason's guild over night.
+ 
+went out to fight the Steel Inquisitor warship, slew the 4 Steel Inquisitors on board
