--- a/OneWiki/data/Fiore.wiki
+++ b/OneWiki/data/Fiore.wiki
@@ -56,7 +56,7 @@ Places of interest in Mayara:
                           Book: [Legend of Regdar]
                           Book: [The Resignation of Kord]
                           Book: [Pantheon of the Dawn War]
-                          Chest with 1000g
+                          Chest with 1000g 15 lock
             -Kitchen: The best Mead and Ale
                       40lbs of Luxurious Food
                       4 kitchen staff commoners
@@ -64,7 +64,7 @@ Places of interest in Mayara:
             -Servant Quarters: 2 servant commoners
                                8 beds
                                4d6 gold
-            -Vault: Ak'anon crafted lock. Requires combination: 2-2-0-4-6-12 or DC 22 Lockpicking
+            -Vault: Ak'anon crafted lock. Requires combination: 2-2-0-4-6-12 or DC 22 Lockpicking, AC 20, HP 200, Dimeritium
                     Found behind 
                     -[AkumaFruits]x1
                     -20,000g
