adding evil session notes

--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -124,9 +124,23 @@ the next time the group goes to sea for an extended periods of time, they will e
  Yanny McLoughin released
  Looted Shirrong's Anvil from the Blacksmith
  4 servants - 3 F (44,42 21 Marta) 1 M
- Armourer half-orc - Anton standing guard
  Gold left in cook's room, Gold left with servants
  
  4 archers and 10 masons bunker down in the mason's guild over night.
  
 went out to fight the Steel Inquisitor warship, slew the 4 Steel Inquisitors on board
+
+++++Session 14 notes:
+orb thrown overboard north-east of mayara
+
+4 griffons found back at the north dock
+
+royal armoror stayed loyal
+age 20ish servant stayed loyal (Marta)
+1 servant from the palace stayed loyal (two ran)
+3 carpenters stayed loyal and given 25g each
+-3 mahogany cannon mounts
+-ship repairs
+
+burning bodies of mayara outside the west gate
+bury the king
