adding new group notes

--- a/OneWiki/data/AkumaFruits.wiki
+++ b/OneWiki/data/AkumaFruits.wiki
@@ -42,7 +42,7 @@ ZOAN
 12. Dragon - Triggered by rage
 
 PARAMECIA
-1. Yesterday - The things that happen to the consumer will occur to their body 24 hours from the time they occur.  
+1. Yesterday - The things that happen to the consumer will occur to their body 24 hours from the time they occur.  - [Queen Kallista Damaia]
 2. Resurrection - guarantees the user a second chance at life. User respawns as ghost in random location in world upon death.
 3. Sight - allows user to see ALL spectrums of light. Thus night is perfectly lit up due to cosmic lights for example.
 4. Pillow - The user's body can absorb any and all blunt force.
