--- a/OneWiki/data/Daniel Milborne.wiki
+++ b/OneWiki/data/Daniel Milborne.wiki
@@ -3,3 +3,7 @@
 A young man saved from a firey death by [Kieran Maon]
 
 Is now inspired to join the [Marines] himself.
+
+Joined as a Private but was raided by [Don Kreig]'s men when at sea, and washed up ashore at [Nowa Huta]
+
+Now lives as a hunter there
