--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -135,8 +135,8 @@ orb thrown overboard north-east of mayara
 
 4 griffons found back at the north dock
 
-royal armoror stayed loyal
-age 20ish servant stayed loyal (Marta)
+[Royal Armoror Grix] stayed loyal
+age 21 servant stayed loyal (Marta)
 1 servant from the palace stayed loyal (two ran)
 3 carpenters stayed loyal and given 25g each
 -3 mahogany cannon mounts
