--- a/OneWiki/OneWiki.wiki
+++ b/OneWiki/OneWiki.wiki
@@ -4,12 +4,12 @@ data_dir = data
 [main]
 wikiwidehistory_maxentries = 100
 footnotes_as_wikiwords = False
-versioning_storagelocation = 0
-last_wiki_word = Evil Group Notes
+indexsearch_enabled = False
+last_wiki_word = Queen Kallista Damaia
 hotkey_showhide_bywiki = 
 log_window_autoshow = Gray
 filestorage_identity_filenamemustmatch = False
-trashcan_storagelocation = 0
+filestorage_identity_moddateisenough = False
 export_default_dir = 
 trashcan_maxnoofbags = 200
 tabs_maxcharacters = 0
@@ -17,18 +17,18 @@ trashcan_askondelete = True
 wiki_icon = 
 headingsasaliases_depth = 0
 wiki_name = OneWiki
-wikipagetitle_creationmode = 1
+tree_expandednodes_rememberduration = 2
 wikipagetitleprefix = ++
 wikipagetitle_fromlinktitle = False
 wiki_lastactivetabno = 0
 first_wiki_word = 
 wikipagefiles_gracefuloutsideaddandremove = True
-indexsearch_enabled = False
+versioning_storagelocation = 0
 wiki_lasttabssubctrls = textedit
 template_pagenamesre = ^template/
-tree_expandednodes_rememberduration = 2
+wikipagetitle_creationmode = 1
 tabhistory_maxentries = 25
-tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Ak'anon Mines,wikipage/Rumbar Pirates;wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel,wikipage/Norrath,wikipage/Kunark;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of the Gauntlet,wikipage/Letho;wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact,helpernode/propcategory/global.contact.icon;wikipage/OneWiki,wikipage/Towns,wikipage/Dun Morhen,wikipage/Nifle Vanhivener;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Characters,wikipage/Rumbar Pirates;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Head Bishop Skarjun;wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Head Bishop Skarjun,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Steel Inquisitor,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Towns,wikipage/Fiore,wikipage/Marines,wikipage/Fiore;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global;wikipage/OneWiki,wikipage/Gods,wikipage/Kord,wikipage/Arabasta;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes;wikipage/OneWiki,wikipage/Towns,wikipage/Odus,wikipage/AkumaFruits;wikipage/OneWiki;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact,helpernode/propcategory/global.contact.icon,helpernode/propvalue/global.contact.icon/contact;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor,wikipage/Order of Steel
+tree_expandednodes_descriptorpathes_main = wikipage/OneWiki,wikipage/Towns,wikipage/Ak'anon,wikipage/Ak'anon Mines,wikipage/Rumbar Pirates;wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel,wikipage/Norrath,wikipage/Kunark;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of the Gauntlet,wikipage/Letho;wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel;wikipage/OneWiki,wikipage/Characters,wikipage/Daniel Milborne;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact,helpernode/propcategory/global.contact.icon;wikipage/OneWiki,wikipage/Towns,wikipage/Dun Morhen,wikipage/Nifle Vanhivener;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor;wikipage/OneWiki,wikipage/Characters,wikipage/Rumbar Pirates;wikipage/OneWiki,wikipage/Characters;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Head Bishop Skarjun;wikipage/OneWiki,wikipage/Towns,wikipage/Norrath,wikipage/Luthadel,wikipage/Norrath;wikipage/OneWiki,wikipage/Organizations,wikipage/Order of Steel,wikipage/Head Bishop Skarjun,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Quests,wikipage/Evil Group Notes,wikipage/Steel Inquisitor,wikipage/Order of Steel;wikipage/OneWiki,wikipage/Towns,wikipage/Fiore,wikipage/Marines,wikipage/Fiore;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global;wikipage/OneWiki,wikipage/Gods,wikipage/Kord,wikipage/Arabasta;wikipage/OneWiki,wikipage/Towns,wikipage/Odus,wikipage/AkumaFruits;wikipage/OneWiki,wikipage/Towns,wikipage/Nowa Huta;wikipage/OneWiki,wikipage/Towns,wikipage/Nowa Huta,wikipage/Queen Kallista Damaia;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact,helpernode/propcategory/global.contact.icon,helpernode/propvalue/global.contact.icon/contact;wikipage/OneWiki,wikipage/Towns;wikipage/OneWiki,wikipage/Quests,wikipage/Group Three Notes;wikipage/OneWiki,helpernode/main/view,helpernode/propcategory/,helpernode/propcategory/global,helpernode/propcategory/global.contact;wikipage/OneWiki,wikipage/Players,wikipage/Evil Group Notes;wikipage/OneWiki,wikipage/Quests;wikipage/OneWiki;wikipage/OneWiki,wikipage/Towns,wikipage/Luthadel,wikipage/Steel Inquisitor,wikipage/Order of Steel
 wiki_wikilanguage = wikidpad_default_2_0
 tree_force_scratchpad_visibility = True
 further_wiki_words = 
@@ -36,7 +36,7 @@ tree_expandednodes_descriptorpathes_views =
 tree_last_root_wiki_word = OneWiki
 db_pagefile_suffix = .wiki
 filestorage_identity_moddatemustmatch = False
-filestorage_identity_moddateisenough = False
+trashcan_storagelocation = 0
 wiki_database_type = original_sqlite
 wikipagefiles_asciionly = False
 indexsearch_formatno = 1
