--- a/OneWiki/data/Nowa Huta.wiki
+++ b/OneWiki/data/Nowa Huta.wiki
@@ -1,10 +1,12 @@
 ﻿++ Nowa Huta
 
-In the center of the island, is the tree ,[Corellon], a massive ancient tree that is easily over 2000ft tall. Larger than any redwood, with branches that span in at least a 500ft radius. Under it's canopy is a wonderful city with possibly the nicest and happiest people to ever exist. With structures so old the original constructors have been forgotten.
+In the center of the island, is the tree ,[Corellon], a massive ancient tree that is easily over 2000ft tall. Larger than any redwood, with branches that span in at least a 500ft radius. Under it's canopy is a wonderful city with possibly the nicest and happiest people to ever exist. With some structures so old the original constructors have been forgotten.
 Lead by [Queen Kallista Damaia] (Tiefling F)
 Surrounded by farm lands, that then again are surrounded by a lush forest. 
 
 Those to pass through the field that surrounds the island will have their memories wiped to some degree. (about 300ft out from the shore)
+Maps also become flushed blank parchment.
+If the tree of [Corellon] is killed, all people who have ever had or lost memories due to it will regain them. 
 
 Wildlife:
   Dryads (pg 121 of monster book) - lures new people to the city, are extensions of the tree [Corellon]
@@ -13,7 +15,7 @@ Wildlife:
   Treant (pg 289 CH 9)
   Black Bear (pg 318 CH 1/2)
   Brown Bear (pg 319 CH 1)
-  Blink Dog (pg 318 CH 1/4)
+  Blink Dog (pg 318 CH 1/4) known as "Hound Fey"
   Deer (pg 321 CH 0)
   Boar (pg 319 CH 1/4)
   Giant Boar(pg 323 CH 2)
@@ -24,11 +26,15 @@ Points of interest:
 
   Water Collection Shrine at the base of Corellon
     Druids here conduct periodic rituals to cause rain and fill the city's revoirs and let water flow down the aqueducts through the city to the farm land.
-        Druid (pg 346)
+        Marden - human(F) - (Born & Raised)
+        Collette - human(F) - (Born & Raised)
+        Groya - half-orc(F) - (Born & Raised)
+          Druid (pg 346)
 
   Temple of the Forgotten
     Ancient elvish stone temple adorned with an 8 pointed star at the top of it's highest point.
     A place for people who newly arrive to aquaint themselves. The center is a large pool filled with a dazzling amount of gold/silver/copper coins where people have surrendered their now useless currency of their past.
+        Maintained by Head Cleric Namaine - human(M) - (Born & Raised)  
         
   Fairgrounds
     Annual Festival occurrs here (5 days after an adventurer group arrives) to celebrate the arrival of the newcomers
@@ -36,16 +42,39 @@ Points of interest:
             "We welcome those who have joined us today. Lives spared of the torment of the outside world. An occasion truly worthy of rejoice. May we live our lives to the fullest with our newest friends."
             
   Bartering Area
-    People trade this-for-that in this economy without currency. As currency doesn't make sense here.
-    Ranchers
+    People trade this-for-that in this economy without currency. As currency doesn't make sense here. (use gold value of items)
+    Ranchers - Frederick - Human(M) (born & raised here)
         -pigs, chickens, cows, goats
-    Farmers 
+        
+    Farmers - Piper - Human(F) (born & raised here)
         -wheat, corn, beans, lettuce, potato
-    Blacksmith
+        
+    Workshop - Forem - Human(M) (born & raised here)
         -sells copper made items mostly (old coins crafted into things)
-    Carpenters
+            -daggers, copper chain shirt/mail(-1), handaxe, shovel, pick, light hammer
+        -sells silver made items (old coins crafted into things)
+            -cutlery     
+        
+    Carpenters - Berea - Elf(F) (formerly from [Fiore])
         -craft, repair and sell furnature mostly
-    Masons    
+        
+    Masons - Geral - Dwarf(M) (formerly from [Fiore])   
         -do repair and maintenance to the ancient elvish style architecture around town, and sometimes construct new when needed
-    Brewers
-        -beer, wine, ale, mead, cider    
+        
+    Brewers - Corbin McLougin - Halfling(M) - (Brother of Yanny from [Fiore]) 
+        -beer, wine, ale, mead, cider  
+        
+    Hunting Supplies - Nanerdar - Elf(M) (formerly from [Kelethin])
+        -Short-bows, Long-bows, arrows  
+        
+Wizard's School of Corellon
+    Many classrooms with many apprentices, classes taught by:
+       Kibalf - High Elf(M) - snoody (formerly from [Felwithe])
+       Jaddin - Gnome(M) - Tempermental (formerly from [Gorda])
+       Heriet - Human(F) - level headed (born & raised here)
+
+    Spells in the Library:
+        Captrips: Blade Ward, Friends, Light, Mending
+        Level 1: Alarm, Comprehend Languages, Feather Fall, Jump, 
+        Level 2: Levitate, Darkvision, Locate Object
+             
