--- a/OneWiki/data/Grund.wiki
+++ b/OneWiki/data/Grund.wiki
@@ -2,5 +2,7 @@
 
 (use "Bandit Captain" pg 344 of monster manual)
 Half Orc - Barbarian
-Great Axe +5 to hit (1d12+3 slash)
+STR(+3) DEX(+3) CON(+3) INT(0) WIS(+1) CHR(0)
+HP 80, AC 18
+Great Axe +6 TH, 1d12+3, slash, 2 attacks
 Refugee from [Luthadel]
