adding evil group notes

--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -144,3 +144,31 @@ age 21 servant stayed loyal (Marta)
 
 burning bodies of mayara outside the west gate
 bury the king
+
+++++Session 15 notes:
+Grogar opened Jor Doken's vault with use of inspiration
+
+Grix - Given Chaos and Anarchy + Half Plate (3 days)XXX 
+   Comfortable Improvement (no more disadvantage on stealth roles)
+   +2 damage on the weapons (20 hits)
+   +2 damage on the dagger for Grogar (15 hits)
+   
+Noble Family was discovered within a saferoom of a noble home, persuaded to not be hostle
+   - 11 gold returned that was taken from the bedroom
+   - now responsible for real estate in Mayara
+   - control of the west dock, 1 warehouse at north dock
+   
+Rimardo's House
+   - old key
+   - green feather
+   - mechanical contraption drawing
+   
+Grogar aquires the Dodo Bird power
+
+Keiger - Kord   
+
+Acquired Regdar's sword hilt
+
+Giant Shark slain - X
+Hunted down some wolves - XXXXXXXXXXX
+Carpenters completed the cannon mounts on the Sailing ship        
