adding new group notes

--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -1,5 +1,8 @@
 ﻿++ Group Three Notes
 
+CALENDAR
+XXXX
+
 The group finds themselves marooned on an unknown island. Waking up after a terrible storm.
 Thier supply vessel had 3 other crewmates who are now washed ashore with them. Only these three manages to survive.
 You do not recall why or where you are, but by the looks of things, you were out for business.
@@ -22,3 +25,9 @@ encountered a Blink Dog
 ++++Session 2
 encounter a hunter from the [Nowa Huta], [Daniel Milborne] - Human(M) - Former [Marines]
     -short bow, 5 arrows, leather armor, dagger
+    
+captured a Blink Dog and are deeping it asleep with the use of nightshade    
+    
+slew giant boar X
+blink dog X    
+crab XXXXXXXX
