adding evil group notes

--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -165,10 +165,35 @@ Rimardo's House
    
 Grogar aquires the Dodo Bird power
 
-Keiger - Kord   
+Keiger - [Kord] has his soul   
 
 Acquired Regdar's sword hilt
 
 Giant Shark slain - X
 Hunted down some wolves - XXXXXXXXXXX
-Carpenters completed the cannon mounts on the Sailing ship        
+Carpenters completed the cannon mounts on the Sailing ship      
+
+++++Session 16 notes:
+  [Royal Armoror Grix] - adding a silver blade to the regdar's sword hilt 
+  
+  Statue of Pelor from the [Fiore] temple of elysium - Cleric focus
+  
+  bringing the 21 servant (Marta) with them to [Augsburg]
+  
+  Augsburg [Marines] presence:
+  1 captain
+  2 officers
+  4 escaped archers+  XXXX
+  20 normies   XXXXXX 
+  keelboat 100HP 57
+  
+  Refugees:
+  harris flenre
+  shirrong bronzecore
+  
+  Taman given anarchy to "check out"
+  
+  Draconic - child slave trade "Koloss fruit"
+  
+  Greg and [Kerri] escaped with [Martin Terratio] to [Gorda]
+  Mayor Ubring agrees to have the town of [Augsburg] migrate to "3 Helms Deep"
