--- a/OneWiki/data/Martin Terratio.wiki
+++ b/OneWiki/data/Martin Terratio.wiki
@@ -6,3 +6,5 @@ Head Cleric of the Temple of Elysium in [Fiore]
 A very kind man, loves telling the story of the island, and recruiting people to be worshipers of [Pelor]
 
 Can offer healing services.
+
+Helped [Kerri] and Greg escape to [Gorda] and he himself then fled to [Dun Morhen]
