--- a/OneWiki/data/Kerri.wiki
+++ b/OneWiki/data/Kerri.wiki
@@ -5,7 +5,7 @@ Kerri worked at the market in [Augsburg] during the raid by [Don Kreig]
 Kerri's fiance in [Augsburg]:
     Greg of Greg's Grub
 
-8 HP, proficiency: medicine 
+12 HP, proficiency: medicine, slight of hand 
 AC 11 - padded
 
 slave training days : XXXXXX
