--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -195,3 +195,20 @@ Carpenters completed the cannon mounts on the Sailing ship
   
   Greg and [Kerri] escaped with [Martin Terratio] to [Gorda]
   Mayor Ubring agrees to have the town of [Augsburg] migrate to "3 Helms Deep"
+  
+++++Session 17 notes:
+  5 days to [Gorda] from [Augsburg] in the sailing ship  
+  
+  Edan gets attunement lvl 1 of Regdar's Radiant Hilt
+  
+  Edan buys Darvin Human the former Marine private for 25g from Don Krieg's slave hold.
+  Kreiger buys Fargrim the Dwarf wizard for 35g who studied at Nowa Huta
+  Croaker buys Thia a Wood Elf Female charismatic for 40g
+  Grogar buys Yevelda a half orc female dockworker for 50g
+  Vulcan buys half orc male farmer for 40g
+  
+  defeated Don Krieg in the arena, and the town is now fully aware. 
+  
+  Announcer name is Stor
+  
+  Taking [Queen Larissa] from [Don Kreig]'s quarters at the colliseum. 
