--- a/OneWiki/data/Don Kreig.wiki
+++ b/OneWiki/data/Don Kreig.wiki
@@ -7,7 +7,7 @@ Has a bounty issued by the [Marines]
 +++Don Kreig
 (use DND Gladiator pg 346)
 Human 
-Platemail Armour 
+Platemail Armour AC 20
 Shield           
 Spear         
 loot: 4D20 + 20 Gold
